--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <div class="card">
                 <img src="maps.png" alt="Maps" class="card-img">
                 <h2 class="text-center">Address</h2>
-                <p class="text-center">Towada 十和田市, </p>
+                <p class="text-center">Towada 十和田市</p>
             </div>
             <div class="card">
                 <img src="mail.png" alt="Email" class="card-img">
