--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <br><br><br>
             <img src="profile-man.png" alt="profile" class="profile-img">
             <h1 class="text-bold text-center">Muhammad Ghaza Al-dzikra</h1>
-            <p class="bio-p">Hello introducing, i am Muhammad Ghaza Al-dzikra, i am a back-end developer who designs or develops sofware</p>
+            <p class="bio-p">Hello introducing, i am Muhammad Ghaza Al-dzikra, i'm a Student of Smk Al-Amanah</p>
             <a href="#skill" class="btn">Let's Stalk</a>
         </div>
     </section>
