--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Porfotolio Ghaza</title>
+    <title>Portofolio Ghaza</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="profile-man.png">
 </head>
@@ -29,7 +29,7 @@
             <br><br><br>
             <img src="profile-man.png" alt="profile" class="profile-img">
             <h1 class="text-bold text-center">Muhammad Ghaza Al-dzikra</h1>
-            <p class="bio-p">Hello introducing, i am Muhammad Ghaza Al-dzikra, i'm a Student of Smk Al-Amanah</p>
+            <p class="bio-p">Hello introducing, i am Muhammad Ghaza Al-dzikra, I'm a Student of Smk Al-Amanah</p>
             <a href="#skill" class="btn">Let's Stalk</a>
         </div>
     </section>
